XCF-3033 - Cleanup UI for jasper reports Patch for a small layout issue observed only with Firefox 2.x
git-svn-id: http://sipxecs.sipfoundry.org/rep/sipXecs/main@14415 ab1d8caa-1f67-47f1-9e81-24633a41865c

--- a/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/layout.css
+++ b/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/layout.css
@@ -460,6 +460,7 @@ div.reports
 	border-color: #C0C0C0;
 	border-width: 1px 1px 1px 1px;
 	background-color: #F0F0F0;
+	width: 260px;
 }
 
 p.reportLabel {
